--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-firebase/app": "14.12.0",
+    "@react-native-firebase/auth": "14.12.0",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@stripe/stripe-react-native": "^0.25.0",
+    "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-camera": "^4.2.1",
+    "react-native-permissions": "^3.7.3",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0"
   },
@@ -37,5 +46,8 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "reactNativePermissionsIOS": [
+    "Camera"
+  ]
 }
